env/ingress-app-sample-k8s/app-specific-ingress.yaml
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${NS}-ingress
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error
      port:
        name: svc-port
  rules:
    - host: a.example.com
      http:
        paths:
          - path: /first
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
                  #name: svc-port
    - host: b.example.com
      http:
        paths:
          - path: /second
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
                #  name: svc-port
